[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# used for `cargo build`
[profile.dev]
panic = "abort"

# used for `cargo build --release`
[profile.release]
panic = "abort"
